Bug 391222 - does not save multiple decrypted files
Summary: does not save multiple decrypted files
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.0.2
Platform: Windows CE Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Andre Heinecke
URL:
Keywords:
: 392643 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-02-28 12:55 UTC by little.jim
Modified: 2018-04-03 06:50 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description little.jim 2018-02-28 12:55:33 UTC
Hi, after decryption of multiple individual encrypted files and click on save all files, only one decrypted file appears
Comment 1 Andre Heinecke 2018-03-06 10:54:08 UTC
Git commit bcc8dfbacd2d2e1d8ac4aaf154faf5db81315e83 by Andre Heinecke.
Committed on 06/03/2018 at 10:52.
Pushed by aheinecke into branch 'master'.

Fix decrypt / verify of multiple files at once

This fixes another regression introduced by 9d1ebcb1.
Use the same workdir for multiple files as the code
expects that.

M  +4    -2    src/crypto/autodecryptverifyfilescontroller.cpp

https://commits.kde.org/kleopatra/bcc8dfbacd2d2e1d8ac4aaf154faf5db81315e83
Comment 2 Andre Heinecke 2018-03-06 10:54:43 UTC
Thanks for your report. Indeed this was a recently introduced bug.

Will be fixed in the next Gpg4win release.
Comment 3 Andre Heinecke 2018-03-07 14:08:56 UTC
A beta of the next version, which contains the fix is available now https://files.gpg4win.org/Beta/gpg4win-3.1.0-beta-current.exe
Comment 4 Andre Heinecke 2018-04-03 06:50:30 UTC
*** Bug 392643 has been marked as a duplicate of this bug. ***