Fix decrypt / verify of multiple files at once

This fixes another regression introduced by 9d1ebcb1.
Use the same workdir for multiple files as the code
expects that.

BUG: 391222